[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity==1.25.3",
    "beautifulsoup4>=4.15.0",
    "fastapi==0.136.3",
    "langchain==1.3.2",
    "langchain-community==0.4.2",
    "langchain-mcp-adapters==0.3.0",
    "langchain-openai==1.3.5",
    "langchain-tavily==0.2.18",
    "langgraph==1.2.2",
    "langgraph-checkpoint-postgres==3.1.0",
    "mcp==1.28.1",
    "nest-asyncio==1.6.0",
    "psycopg-pool==3.3.1",
    "psycopg[binary]==3.3.4",
    "pycountry==26.2.16",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "tavily-python==0.7.24",
    "uvicorn==0.48.0",
]
